--- a/notes/消息中间件.md
+++ b/notes/消息中间件.md
@@ -1,5 +1,5 @@
 # 消息中间件
-- activeMQ
+- [activeMQ](https://github.com/wangtengke/Notes/blob/master/notes/%E6%B6%88%E6%81%AF%E4%B8%AD%E9%97%B4%E4%BB%B6.md#activemq)
 - rocketMQ
 - kafka
 - zookeeper
