--- a/notes/数据库原理.md
+++ b/notes/数据库原理.md
@@ -1,1 +1,39 @@
 # 数据库原理
+- 一、事务
+    - 概念
+    - ACID
+    - AUTOCOMMIT
+- 二、并发一致性问题
+    - 丢失修改
+    - 读脏数据
+    - 不可重复读
+    - 幻影读
+- 三、封锁
+    - 封锁粒度
+    - 封锁类型
+    - 封锁协议
+    - MySQL 隐式与显示锁定
+- 四、隔离级别
+    - 未提交读（READ UNCOMMITTED）
+    - 提交读（READ COMMITTED）
+    - 可重复读（REPEATABLE READ）
+    - 可串行化（SERIALIZABLE）
+- 五、多版本并发控制
+    - 版本号
+    - 隐藏的列
+    - Undo 日志
+    - 实现过程
+    - 快照读与当前读
+- 六、Next-Key Locks
+    - Record Locks
+    - Gap Locks
+    - Next-Key Locks
+- 七、关系数据库设计理论
+    - 函数依赖
+    - 异常
+    - 范式
+- 八、ER 图
+    - 实体的三种联系
+    - 表示出现多次的关系
+    - 联系的多向性
+    - 表示子类
